<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">coinkeeper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_mode">Edit Mode</string>
    <string name="title_item">title</string>
    <string name="amount">amount</string>
    <string name="dialog_title_add_item">Please enter title</string>
    <string name="dialog_title_remove_item">Attention, Item is not recoverable!</string>
    <string name="dialog_title_transaction">Please enter amount</string>
    <string name="set_title">Add</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="income_sources">Income Sources</string>
    <string name="account">Account</string>
    <string name="spend">Expenses</string>
    <string name="goal">Goal</string>
    <string name="budget">Budget:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="transaction_from">From:</string>
    <string name="transaction_to">To:</string>
    <string name="transaction_edit_title">Edit transaction</string>
    <string name="transaction_btn_remove">Remove</string>
    <string name="transaction_btn_done">Done</string>
    <string name="transaction_amount">Amount</string>

    <string name="remove_item_and_transaction">Remove item and transaction</string>
    <string name="remove_item">Remove item</string>

    <string name="toast_error_money">Please enter amount of money</string>

    <string name="export_db">Export Data base</string>
    <string name="import_db">Import Data base</string>

    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign In</string>

    <string name="create_login">Choose your username</string>
    <string name="create_password">Create a password</string>
    <string name="create_user_registration">Create your Coin Account</string>
    <string name="confirm_password">Confirm your password</string>


    <string name="get_forgot_password">Forgot password?</string>
    <string name="get_registration">Registration</string>

    <string name="edit_income_sources">Edit income sources</string>
    <string name="edit_account">Edit account</string>
    <string name="edit_expenses">Edit category of expenses</string>
    <string name="edit_goals">Edit financial goal</string>
    <string name="edit_title">Edit title</string>
    <string name="edit_current_amount">Edit amount</string>

    <string name="edit_finish">Finish</string>


</resources>
